--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Packages used by Angular",
     "scripts": {
         "ng": "ng",
-        "start": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve",
+        "start": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --disableHostCheck true",
         "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
