--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "go-bank-online-banking-frontend",
+    "name": "overseas-fund-transfer",
     "version": "1.0.2",
     "description": "Packages used by Angular",
     "scripts": {
