--- a/overseas-fund-transfer/Chart.yaml
+++ b/overseas-fund-transfer/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: 1.0.2
 description: A Helm chart for Marketplace Frontend
-name: go-bank-online-banking-frontend
+name: overseas-fund-transfer
 version: 1.0.2
