--- a/overseas-fund-transfer/env/dev-values.yaml
+++ b/overseas-fund-transfer/env/dev-values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 368696334230.dkr.ecr.ap-south-1.amazonaws.com/go-bank-online-banking-frontend
+  repository: github.com/apixplatform/overseas-fund-transfer
   tag: 1.0.2
   pullPolicy: Always
 
