--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "ng-inline-svg": "^8.5.1",
         "ngrx-store-freeze": "^0.2.4",
         "ngx-clipboard": "^12.2.0",
-        "ngx-daterangepicker-material": "^2.1.7",
+        "ngx-daterangepicker-material": "2.1.7",
         "ngx-highlightjs": "^3.0.3",
         "ngx-perfect-scrollbar": "^8.0.0",
         "ngx-permissions": "^7.0.3",
